// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useContextMenu should allow the anchor, baseId, and menuLabel to be configured 1`] = `
<body
  class="rmd-utils--mouse"
  data-rmd-noscroll=""
  style="overflow: hidden;"
>
  <div>
    <div
      data-testid="container"
    />
  </div>
  <div
    aria-label="Custom Label"
    class="rmd-menu rmd-menu--elevated"
    id="custom-context-menu-menu"
    role="menu"
    style="left: 16px; top: 0px; position: fixed; transform-origin: 50% 0;"
    tabindex="-1"
  >
    <ul
      class="rmd-list"
      role="none"
    >
      <li
        class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-menu-item"
        role="menuitem"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="rmd-icon rmd-icon--svg rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.64 7.64c.23-.5.36-1.05.36-1.64 0-2.21-1.79-4-4-4S2 3.79 2 6s1.79 4 4 4c.59 0 1.14-.13 1.64-.36L10 12l-2.36 2.36C7.14 14.13 6.59 14 6 14c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4c0-.59-.13-1.14-.36-1.64L12 14l7 7h3v-1L9.64 7.64zM6 8c-1.1 0-2-.89-2-2s.9-2 2-2 2 .89 2 2-.9 2-2 2zm0 12c-1.1 0-2-.89-2-2s.9-2 2-2 2 .89 2 2-.9 2-2 2zm6-7.5c-.28 0-.5-.22-.5-.5s.22-.5.5-.5.5.22.5.5-.22.5-.5.5zM19 3l-6 6 2 2 7-7V3z"
          />
        </svg>
        <span
          class="rmd-list-item__text"
        >
          Cut
        </span>
        <span
          class="rmd-ripple-container"
        />
      </li>
      <li
        class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-menu-item"
        role="menuitem"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="rmd-icon rmd-icon--svg rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
          />
        </svg>
        <span
          class="rmd-list-item__text"
        >
          Copy
        </span>
        <span
          class="rmd-ripple-container"
        />
      </li>
      <li
        class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-menu-item"
        role="menuitem"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="rmd-icon rmd-icon--svg rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 2h-4.18C14.4.84 13.3 0 12 0c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm7 18H5V4h2v3h10V4h2v16z"
          />
        </svg>
        <span
          class="rmd-list-item__text"
        >
          Paste
        </span>
        <span
          class="rmd-ripple-container"
        />
      </li>
    </ul>
  </div>
</body>
`;

exports[`useContextMenu should work correctly 1`] = `
<body
  class="rmd-utils--mouse"
  data-rmd-noscroll=""
  style="overflow: hidden;"
>
  <div>
    <div
      data-testid="container"
    />
  </div>
  <div
    aria-label="Context Menu"
    class="rmd-menu rmd-menu--elevated"
    id="context-menu-menu"
    role="menu"
    style="left: 100px; top: 50px; position: fixed; transform-origin: 0 0;"
    tabindex="-1"
  >
    <ul
      class="rmd-list"
      role="none"
    >
      <li
        class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-menu-item"
        role="menuitem"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="rmd-icon rmd-icon--svg rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.64 7.64c.23-.5.36-1.05.36-1.64 0-2.21-1.79-4-4-4S2 3.79 2 6s1.79 4 4 4c.59 0 1.14-.13 1.64-.36L10 12l-2.36 2.36C7.14 14.13 6.59 14 6 14c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4c0-.59-.13-1.14-.36-1.64L12 14l7 7h3v-1L9.64 7.64zM6 8c-1.1 0-2-.89-2-2s.9-2 2-2 2 .89 2 2-.9 2-2 2zm0 12c-1.1 0-2-.89-2-2s.9-2 2-2 2 .89 2 2-.9 2-2 2zm6-7.5c-.28 0-.5-.22-.5-.5s.22-.5.5-.5.5.22.5.5-.22.5-.5.5zM19 3l-6 6 2 2 7-7V3z"
          />
        </svg>
        <span
          class="rmd-list-item__text"
        >
          Cut
        </span>
        <span
          class="rmd-ripple-container"
        />
      </li>
      <li
        class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-menu-item"
        role="menuitem"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="rmd-icon rmd-icon--svg rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
          />
        </svg>
        <span
          class="rmd-list-item__text"
        >
          Copy
        </span>
        <span
          class="rmd-ripple-container"
        />
      </li>
      <li
        class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-menu-item"
        role="menuitem"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="rmd-icon rmd-icon--svg rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 2h-4.18C14.4.84 13.3 0 12 0c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm7 18H5V4h2v3h10V4h2v16z"
          />
        </svg>
        <span
          class="rmd-list-item__text"
        >
          Paste
        </span>
        <span
          class="rmd-ripple-container"
        />
      </li>
    </ul>
  </div>
</body>
`;
